# PrehistoricWorld

./: LICENSE  Makefile  Makefile.win  PrehistoricWorld.cabal  README.md  a.out
src/: hsbracket.c  main.c
src/c/: animal.c  animal.h  game.c  game.h  graphical_api.c  graphical_api.h  grid.c  grid.h  main.c  utils.c  utils.h
src/haskell/: AI.hi  AI.hs  AI_stub.h  Safe.hs
targetLinux/: PrehistoricWorld
test/c/: graphical_api_test.c  main_test.c  utils_test.c
tmp/: AI.hi
