name:                PrehistoricWorld
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Yan Frimmel
maintainer:          yanfrimmel1411@gmail.com           
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  exposed-modules:     AI

  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    ForeignFunctionInterface,
                       CPP
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src/haskell
  -- c-sources:           src/c/*.c
  default-language:    Haskell2010
  ghc-options:         -no-hs-main -O2 -shared -fPIC -dynamic 
  extra-libraries:     HSrts-ghc8.0.2
  
